# Forge-Ai

./: .env.example  .gitignore  COMMANDS.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
AppData/Local/Temp/e0c120fc-7918-4b66-8eed-46a79ef86755_jarvis_debugged_package.zip.755/yc/: index.html
OneDrive/Tài liệu/Desktop/AIT/jules_session_2870931097663839006_satap-hackathon-prototype-2870931097663839006/backend/: .env.example  app.py  (+4 more)
OneDrive/Tài liệu/Desktop/duo/: .env.example  .gitignore  README.md  package-lock.json  package.json  pubspec.yaml
OneDrive/Tài liệu/Desktop/duo/docs/: download-and-share.md  execution-checklist.md  features.md  frontend.md  prd.md  run-and-deploy.md  security-audit.md  stitch.md  wireframe.md
OneDrive/Tài liệu/Desktop/duo/lib/: main.dart
OneDrive/Tài liệu/Desktop/duo/linux/: CMakeLists.txt
OneDrive/Tài liệu/Desktop/duo/server/: README.md  index.js
OneDrive/Tài liệu/Desktop/duo/test/: widget_test.dart
OneDrive/Tài liệu/Desktop/duo/web/: index.html
OneDrive/Tài liệu/Desktop/story nest/: prdme.md
agents/: __init__.py  architect_agent.py  base.py  developer_agent.py  devops_agent.py  pm_agent.py  review_agent.py  security_agent.py  test_agent.py  uml_agent.py
orchestrator/: orchestrator.py  state.py
prompts/: architect_agent.txt  developer_agent.txt  devops_agent.txt  pm_agent.txt  review_agent.txt  security_agent.txt  test_agent.txt  uml_agent.txt
tests/: test_agents.py  test_orchestrator.py  test_webhooks.py
tools/: gitlab_tools.py  llm_tools.py
webhooks/: parser.py  router.py
(+94 files in other folders)
