[project]
name = "gitlab-sdlc-agents"
version = "0.1.0"
description = "GitLab AI-powered SDLC agent system"
license = { text = "MIT" }
authors = [{ name = "Gemini CLI", email = "gemini-cli@google.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "google-genai>=0.1.0",
    "python-gitlab>=4.4.0",
    "redis>=5.0.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff",
    "mypy",
    "pytest-mock"
]

[tool.setuptools]
packages = ["agents", "orchestrator", "webhooks", "tools", "prompts"]
include-package-data = true

[tool.setuptools.package-data]
prompts = ["*.txt"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
